@@ -33,4 +33,10 @@ limitations under the License.
     <dimen name="tutorial_bubble_3_size">80dp</dimen>
     <dimen name="tutorial_bubble_padding">35dp</dimen>
 
+    <!-- multi-window -->
+    <dimen name="app_defaultsize_w">632.0dip</dimen>
+    <dimen name="app_defaultsize_h">598.0dip</dimen>
+    <dimen name="app_minimumsize_w">632.0dip</dimen>
+    <dimen name="app_minimumsize_h">598.0dip</dimen>
+
 </resources>
